# AI-Divination

./: .gitignore  AGENTS.md  README.md  SECURITY_CHECKLIST.md  analyze_performance.sh  auth.py  configure_security.sh  cookies.txt  database.py  divination.db  pyproject.toml  server.py  start.sh  test_tools.py  tools.py
_backup_v2_20251229_160729/backend/: pyproject.toml  run.py
_backup_v2_20251229_160729/backend/app/: routes.py
_backup_v2_20251229_160729/backend/prompts/: system_prompt.md
backend/: optimize_db.py  optimize_db_simple.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py  routes.py
backend/app/api/: __init__.py  admin.py  auth.py  birth_data.py  debug.py  divination.py  history.py  liuyao.py  settings.py  tarot.py  tarot.py.backup  websocket.py  ziwei.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/data/: taiwan_cities.py
backend/app/middleware/: performance.py  security.py
backend/app/models/: __init__.py  birth_data.py  history.py  settings.py  share_token.py  user.py
backend/app/schemas/: ziwei.py
backend/app/services/: __init__.py  ai.py  ai_tasks.py  divination_core.py  liuyao.py  websocket.py  ziwei.py  ziwei_service.py
backend/data/: hexagrams_64.csv  hexagrams_64.json
backend/migrations/: add_ai_config_model.py  add_ai_config_name.py
backend/prompts/: liuyao_system.md  system_prompt.md  system_prompt_v2.md  tarot_system_prompt_celtic_cross.md  tarot_system_prompt_single.md  tarot_system_prompt_three_card.md  ziwei_system.md
backend/scripts/: scrape_hexagrams.py
(+160 files in other folders)
