[project]
name = "ai-divination-backend"
version = "2.0.0"
description = "AI 易經六爻占卜系統後端服務"
requires-python = ">=3.10"
authors = [
    { name = "AI Divination Team" }
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "lunar-python>=1.3.0",
    "google-genai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
